Initial commit of semantic clustering.
